--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="./src/assets/images/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Go Digital</title>
+  <meta name="description"
+    content="Η Ασφάλιση μόλις έγινε ψηφιακά απλή! Καλωσορίσατε στη GoDigital, την πλατφόρμα ασφάλισης που απλοποιεί τη διαδικασία." />
+  <meta name="keywords" content="Ασφάλιση, GoDigital, Ψηφιακή Ασφάλιση, Ασφαλιστικά Προϊόντα, Καινοτόμα Προϊόντα" />
+  <title>GoDigital - Η Ασφάλιση μόλις έγινε ψηφιακά απλή!</title>
 </head>
 
 <body>
